# SAGA

./: .gitignore  README.md  pyproject.toml
src/saga/: __init__.py  graph.py  main.py  playtest.py  sfx.py  state.py
src/saga/agents/: asset_maker.py  audio_agent.py  coder.py  game_designer.py  playtest_feedback.py  qa_agent.py  studio_director.py
